Increase bottom padding on main content section to prevent black services section overlap
Changed padding from 100px to 150px bottom on mobile to give more space between title and services section.

--- a/css/style.css
+++ b/css/style.css
@@ -826,7 +826,7 @@ p a:hover {
 
 	#body div#background div {
 		width: 100%;
-		padding: 40px 20px 100px;
+		padding: 40px 20px 150px;
 	}
 
 	#body div#background div div {
